"preparation du profil du user"

--- a/src/SocialPro/MainBundle/Resources/views/layout.html.twig
+++ b/src/SocialPro/MainBundle/Resources/views/layout.html.twig
@@ -49,8 +49,7 @@
                 <li><a href="#" class="fa fa-google-plus"></a></li>
             </ul>
             <ul class="authentication">
-                <li><a href="#">Login</a></li>
-                <li><a href="#">Register</a></li>
+                <li><a href="#">Logged as:</a></li>
             </ul>
             <div class="language"> <a href="#" class="toggle"><img src="images/flags/32/US.png" alt=""> ENG</a>
                 <ul>
@@ -183,6 +182,7 @@
 <script>
 
 </script>
+</div>
 </body>
 
 <!-- Mirrored from new.uouapps.com/tiger-html/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 16 Jan 2017 22:16:17 GMT -->
