--- a/src/SocialPro/MainBundle/Resources/views/layout.html.twig
+++ b/src/SocialPro/MainBundle/Resources/views/layout.html.twig
@@ -66,7 +66,7 @@
 
 <div class="box-shadow-for-ui">
     <div class="uou-block-2b">
-        <div class="container"> <a href="#" class="logo"><img src="images/logo.png" alt=""></a>
+        <div class="container"> <a href="#" class="logo"><img src="{{ asset("public/images/logo-dark.png") }}" alt=""></a>
             <nav class="nav">
                 <ul class="sf-menu">
                     <li class="active"><a href="index-2.html"><i class="fa  fa-home"></i></a></li>
@@ -110,7 +110,7 @@
 <div class="uou-block-4e">
     <div class="container">
         <div class="row">
-            <div class="col-md-3 col-sm-6"> <a href="#" class="logo"><img src="images/logo.png" alt=""></a>
+            <div class="col-md-3 col-sm-6"> <a href="#" class="logo"><img src="{{ asset("public/images/logo-dark.png") }}" alt=""></a>
                 <ul class="contact-info has-bg-image contain" data-bg-image="images/footer-map-bg.png">
                     <li> <i class="fa fa-map-marker"></i>
                         <address>
