--- a/src/SocialPro/MainBundle/Resources/views/layout.html.twig
+++ b/src/SocialPro/MainBundle/Resources/views/layout.html.twig
@@ -44,7 +44,7 @@
                 </form>
             </div>
             <ul class="social">
-                <li><a href="#" class="fa fa-facebooSk"></a></li>
+                <li><a href="#" class="fa fa-facebook"></a></li>
                 <li><a href="#" class="fa fa-twitter"></a></li>
                 <li><a href="#" class="fa fa-google-plus"></a></li>
             </ul>
