fonctionnalité ajout projet en marche, très basique, pas de controle

--- a/src/SocialPro/ProjectBundle/Resources/views/Project/ajout.html.twig
+++ b/src/SocialPro/ProjectBundle/Resources/views/Project/ajout.html.twig
@@ -2,12 +2,9 @@
 
 {% block contenent %}
 
-{{ form_start(form, {'method': 'post', 'action': path('fos_user_registration_register'), 'attr': {'class': 'fos_user_registration_register'}}) }}
-    {{ form_widget(form) }}
-<div>
-    <input type="submit" value="{{ 'registration.submit'|trans }} " class="form-submit button pill large border-theme bkg-hover-theme color-theme color-hover-white" />
-</div>
+{{ form_start(form) }}
+{{ form_widget(form) }}
+    <button type="submit">Ajouter</button>
 {{ form_end(form) }}
-
-
+    {{ dump(app.user) }}
 {% endblock %}
