--- a/src/SocialPro/ProjectBundle/Resources/views/Project/index.html.twig
+++ b/src/SocialPro/ProjectBundle/Resources/views/Project/index.html.twig
@@ -7,5 +7,8 @@
         {% endfor %}
     </ul>
 
+    <div class="navigation">
+        {{ knp_pagination_render(project) }}
+    </div>
 
 {% endblock %}
